---------------------------------------------------------------------------
Version 5.7.4  [V5-BETA] (rgerhards), 2011-02-??
- added pmsnare parser module (written by David Lang)
- enhanced imfile to support non-cancel input termination
- improved systemd socket activation thanks to Marius Tomaschweski
- bugfix: pmsnare causded abort under some conditions
- bugfix: abort if imfile reads file line of more than 64KiB
  Thanks to Peter Eisentraut for reporting and analysing this problem.
  bug tracker: http://bugzilla.adiscon.com/show_bug.cgi?id=221
- bugfix: queue engine did not properly slow down inputs in FULL_DELAY mode
  when in disk-assisted mode. This especially affected imfile, which
  created unnecessarily queue files if a large set of input file data was
  to process.
- bugfix: very long running actions could prevent shutdown under some
  circumstances. This has now been solved, at least for common
  situations.
---------------------------------------------------------------------------
Version 5.7.3  [V5-BETA] (rgerhards), 2011-02-07
- added support for processing multi-line messages in imfile
- added $IMUDPSchedulingPolicy and $IMUDPSchedulingPriority config settings
- added $LocalHostName config directive
- bugfix: fixed build problems on some platforms
  namely those that have 32bit atomic operations but not 64 bit ones
- bugfix: local hostname was pulled too-early, so that some config 
  directives (namely FQDN settings) did not have any effect
- bugfix: imfile did duplicate messages under some circumstances
- added $OMMySQLConfigFile config directive
- added $OMMySQLConfigSection config directive
---------------------------------------------------------------------------
Version 5.7.2  [V5-DEVEL] (rgerhards), 2010-11-26
- bugfix(important): problem in TLS handling could cause rsyslog to loop
  in a tight loop, effectively disabling functionality and bearing the
  risk of unresponsiveness of the whole system.