@@ -3,6 +3,9 @@ Version 5.7.4  [V5-BETA] (rgerhards), 2011-02-??
 - added pmsnare parser module (written by David Lang)
 - enhanced imfile to support non-cancel input termination
 - improved systemd socket activation thanks to Marius Tomaschweski
+- improved error reporting for $WorkDirectory
+  non-existance and other detectable problems are now reported,
+  and the work directory is NOT set in this case
 - bugfix: pmsnare causded abort under some conditions
 - bugfix: abort if imfile reads file line of more than 64KiB
   Thanks to Peter Eisentraut for reporting and analysing this problem.
